--- a/python/notebook/Data Manupulation.ipynb
+++ b/python/notebook/Data Manupulation.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "array([-336.03258092,  244.45331369, 1393.32231241])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -165,17 +165,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -234,36 +235,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 213,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 9.510000e-01,  2.440000e-01, -2.690000e-01, -6.967890e+02],\n",
-       "       [-3.580000e-01,  7.580000e-01, -5.780000e-01,  2.306030e+02],\n",
-       "       [ 6.200000e-02,  6.350000e-01,  7.930000e-01,  1.706461e+03],\n",
-       "       [ 0.000000e+00,  0.000000e+00,  0.000000e+00,  1.000000e+00]])"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Translation matrix\n",
     "P_matrix_filename = os.path.join('../static_data', 'T.csv')\n",
     "P = np.loadtxt(P_matrix_filename, delimiter=',')\n",
-    "P"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "def convert2world(P, coord):\n",
     "    '''\n",
     "    Convert from Camera coordniate to World coordinate (according to P)\n",
@@ -278,23 +257,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
     "ordered_files = dm.natural_sort(files)\n",
-    "mean_of_points = []\n",
-    "for fn in files:\n",
+    "mean_of_points = np.zeros((len(ordered_files), 3))\n",
+    "for i, fn in enumerate(files):\n",
     "    csv_path = os.path.join(ob_path, fn)\n",
     "    points = np.loadtxt(csv_path, delimiter=',')\n",
     "    mean = points.mean(0)\n",
     "    real_world = convert2world(P, mean)\n",
-    "    mean_of_points.append(real_world)"
+    "    mean_of_points[i] = real_world"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +282,7 @@
        "(3, 149)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,13 +295,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae39caa8ac554e69a8b793aade15b2c3",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -351,6 +330,88 @@
     "plt.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xedges = [i for i in range(-2000, 2000, 50)]\n",
+    "yedges = [i for i in range(-2000, 2000, 50)]\n",
+    "\n",
+    "x = mp[0][~np.isnan(mp[0])]\n",
+    "y = mp[1][~np.isnan(mp[1])]\n",
+    "z = mp[2][~np.isnan(mp[2])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H, xedges, yedges = np.histogram2d(x, y, bins=(xedges, yedges))\n",
+    "H = H.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d46f14ebee6d44bda6a933114b421eb4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FigureCanvasNbAgg()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%matplotlib widget\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "\n",
+    "# imshow:\n",
+    "\n",
+    "# ax = fig.add_subplot(131, title='imshow: square bins')\n",
+    "# plt.imshow(H, interpolation='nearest', origin='low',\n",
+    "#            extent=[xedges[0], xedges[-1], yedges[0], yedges[-1]])\n",
+    "\n",
+    "\n",
+    "# pcolor mesh:\n",
+    "\n",
+    "ax = fig.add_subplot(111, title='pcolormesh: actual edges',\n",
+    "                     aspect='equal')\n",
+    "X, Y = np.meshgrid(xedges, yedges)\n",
+    "ax.pcolormesh(X, Y, H)\n",
+    "\n",
+    "# non uniform image:\n",
+    "\n",
+    "# ax = fig.add_subplot(111, title='NonUniformImage: interpolated',\n",
+    "#                      aspect='equal', xlim=xedges[[0, -1]], ylim=yedges[[0, -1]])\n",
+    "# im = mpl.image.NonUniformImage(ax, interpolation='bilinear')\n",
+    "# xcenters = (xedges[:-1] + xedges[1:]) / 2\n",
+    "# ycenters = (yedges[:-1] + yedges[1:]) / 2\n",
+    "# im.set_data(xcenters, ycenters, H)\n",
+    "# ax.images.append(im)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
