--- a/python/notebook/Data Manupulation.ipynb
+++ b/python/notebook/Data Manupulation.ipynb
@@ -263,12 +263,28 @@
    "source": [
     "ordered_files = dm.natural_sort(files)\n",
     "mean_of_points = np.zeros((len(ordered_files), 3))\n",
-    "for i, fn in enumerate(files):\n",
+    "for i, fn in enumerate(ordered_files):\n",
     "    csv_path = os.path.join(ob_path, fn)\n",
     "    points = np.loadtxt(csv_path, delimiter=',')\n",
     "    mean = points.mean(0)\n",
     "    real_world = convert2world(P, mean)\n",
     "    mean_of_points[i] = real_world"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ordered_files = dm.natural_sort(files)\n",
+    "all_points = []\n",
+    "for i, fn in enumerate(ordered_files):\n",
+    "    csv_path = os.path.join(ob_path, fn)\n",
+    "    points = np.loadtxt(csv_path, delimiter=',')\n",
+    "    mean = points.mean(0)\n",
+    "    real_world = convert2world(P, mean)\n",
+    "    all_points.append(real_world)"
    ]
   },
   {
@@ -333,12 +349,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xedges = [i for i in range(-2000, 2000, 50)]\n",
-    "yedges = [i for i in range(-2000, 2000, 50)]\n",
+    "xedges = [i for i in range(-1000, 2000, 50)]\n",
+    "yedges = [i for i in range(-1000, 2000, 50)]\n",
     "\n",
     "x = mp[0][~np.isnan(mp[0])]\n",
     "y = mp[1][~np.isnan(mp[1])]\n",
@@ -347,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,13 +373,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d46f14ebee6d44bda6a933114b421eb4",
+       "model_id": "ff2240e91ff34eaea55a3c4379a7019a",
        "version_major": 2,
        "version_minor": 0
       },
