--- a/python/notebook/pose_analysis.ipynb
+++ b/python/notebook/pose_analysis.ipynb
@@ -274,13 +274,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "2cfb48020ae94db8bcd4fb360afdf35f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -424,7 +424,7 @@
    "outputs": [],
    "source": [
     "H, xedges, yedges = np.histogram2d(x, y, bins=(xedges, yedges))\n",
-    "H = H.T"
+    "H = H.T  # let each row list bins with common y range"
    ]
   },
   {
@@ -435,7 +435,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc4b25af26d040d88a5f36feb52ea72b",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
