--- a/python/notebook/pose_analysis.ipynb
+++ b/python/notebook/pose_analysis.ipynb
@@ -280,7 +280,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2cfb48020ae94db8bcd4fb360afdf35f",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
    "source": [
     "del joint\n",
     "\n",
-    "joint_val = JointType.LeftElbow.value\n",
+    "joint_val = JointType.LeftShoulder.value\n",
     "\n",
     "print(\"file count: \", len(files))\n",
     "joint = np.zeros((len(files), 3))\n",
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "(3, 813)"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 334,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
@@ -404,13 +404,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xedges = [i for i in range(-1000, 2000, 50)]\n",
-    "yedges = [i for i in range(-1000, 2000, 50)]\n",
-    "zedges = [i for i in range(-2000, 2000, 50)]\n",
+    "xedges = [i for i in range(-2000, 2000, 50)]\n",
+    "yedges = [i for i in range(-2000, 2000, 50)]\n",
+    "zedges = [i for i in range(-1500, 1500, 50)]\n",
     "\n",
     "x = roll_joint[0][~np.isnan(roll_joint[0])]\n",
     "y = roll_joint[1][~np.isnan(roll_joint[1])]\n",
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,13 +429,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "bd34c3b0950f43058c46e969be9a77c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -477,6 +477,22 @@
     "# ax.images.append(im)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 339,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.savefig('LeftShoulder.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
