--- a/python/notebook/Data Manupulation.ipynb
+++ b/python/notebook/Data Manupulation.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -78,24 +78,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ob_name = 'cup'\n",
+    "ob_name = 'person'\n",
     "ob_path = os.path.join(data_path, ob_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "149\n"
+      "611\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,23 +117,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5051, 3)\n"
+      "(98951, 3)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([-336.03258092,  244.45331369, 1393.32231241])"
+       "array([-743.93353606,  354.01878534, 1719.14109003])"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 343,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,15 +145,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5051\n",
-      "5051\n"
+      "98951\n",
+      "98951\n"
      ]
     }
    ],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,32 +273,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ordered_files = dm.natural_sort(files)\n",
-    "all_points = []\n",
-    "for i, fn in enumerate(ordered_files):\n",
-    "    csv_path = os.path.join(ob_path, fn)\n",
-    "    points = np.loadtxt(csv_path, delimiter=',')\n",
-    "    mean = points.mean(0)\n",
-    "    real_world = convert2world(P, mean)\n",
-    "    all_points.append(real_world)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3, 149)"
+       "(3, 611)"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 350,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
@@ -349,12 +333,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xedges = [i for i in range(-1000, 2000, 50)]\n",
-    "yedges = [i for i in range(-1000, 2000, 50)]\n",
+    "xedges = [i for i in range(-2000, 2000, 50)]\n",
+    "yedges = [i for i in range(-2000, 2000, 50)]\n",
     "\n",
     "x = mp[0][~np.isnan(mp[0])]\n",
     "y = mp[1][~np.isnan(mp[1])]\n",
@@ -363,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,13 +357,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff2240e91ff34eaea55a3c4379a7019a",
+       "model_id": "1373fe75b81d4a25bfb6765de1f7bb48",
        "version_major": 2,
        "version_minor": 0
       },
@@ -421,6 +405,29 @@
     "# ax.images.append(im)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 355,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.savefig('person_hist.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
