--- a/python/notebook/pose_analysis.ipynb
+++ b/python/notebook/pose_analysis.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -133,14 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "7\n"
      ]
     }
    ],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,37 +195,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-350.43131811, 1124.9982621 ,  852.99991521],\n",
-       "       [-222.77477266, 1011.95923265,  751.32672713],\n",
-       "       [-297.38623775, 1049.0748042 ,  828.75032056],\n",
-       "       [-275.02933208, 1320.15687998,  462.06594761],\n",
-       "       [-407.93253136, 1407.92585112,  201.54523927],\n",
-       "       [-176.57373434,  907.64234451,  717.12393742],\n",
-       "       [-135.85623743,  845.96976338,  469.32787747],\n",
-       "       [-147.83764049,  865.96806082,  598.61711208],\n",
-       "       [-309.48036031, 1219.60240559,  322.29632611],\n",
-       "       [-575.33368539,  972.00832432,  388.47746826],\n",
-       "       [          nan,           nan,           nan],\n",
-       "       [-249.98843964, 1057.60848652,  322.38362962],\n",
-       "       [-463.70983143,  866.57783876,  391.33387144],\n",
-       "       [          nan,           nan,           nan],\n",
-       "       [-347.57095112, 1117.64946067,  892.99968127],\n",
-       "       [-330.63085969, 1089.44242607,  900.39270603],\n",
-       "       [          nan,           nan,           nan],\n",
-       "       [-244.84822153, 1041.43386281,  869.73473433]])"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print(pc)\n",
     "# print(rw_pc)"
@@ -233,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -306,6 +278,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.savefig(\"compare.png\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -314,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +309,7 @@
    "source": [
     "del joint\n",
     "\n",
-    "joint_val = JointType.LeftShoulder.value\n",
+    "joint_val = JointType.LeftHand.value\n",
     "\n",
     "print(\"file count: \", len(files))\n",
     "joint = np.zeros((len(files), 3))\n",
@@ -344,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +334,7 @@
        "(3, 813)"
       ]
      },
-     "execution_count": 334,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,13 +347,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "91ad5725b8084814b370a950a7c40812",
        "version_major": 2,
        "version_minor": 0
       },
@@ -480,11 +461,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.savefig('LeftShoulder.png')"
+    "plt.savefig('LeftShoulder_track.png')"
    ]
   },
   {
