try the notebooks again, start making python code@

--- a/python/notebook/Data Manupulation.ipynb
+++ b/python/notebook/Data Manupulation.ipynb
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# setup which datetime to get\n",
     "dm = DataManagement()\n",
-    "after = dt(2018, 7, 23, 14, 0, 0)\n",
-    "before = dt(2018, 7, 23, 14, 1, 0)\n",
+    "after = dt(2018, 9, 9, 13, 7, 0)\n",
+    "before = dt(2018, 9, 9, 13, 8, 0)\n",
     "datetimes = dm.get_datetimes_in(after, before)\n",
     "\n",
     "assert len(datetimes) == 1\n",
@@ -58,14 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['chair', 'cup', 'dining table', 'keyboard', 'laptop', 'person', 'traffic light']\n"
+      "['book', 'chair', 'cup', 'dining table', 'keyboard', 'knife', 'laptop', 'person', 'potted plant', 'sink', 'sports ball']\n"
      ]
     }
    ],
@@ -78,24 +78,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ob_name = 'person'\n",
+    "ob_name = 'sink'\n",
     "ob_path = os.path.join(data_path, ob_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "611\n"
+      "716\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,23 +117,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(98951, 3)\n"
+      "(19663, 3)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([-743.93353606,  354.01878534, 1719.14109003])"
+       "array([-1573.59131633,  -592.57718875,  3042.5855668 ])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,15 +145,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "98951\n",
-      "98951\n"
+      "19663\n",
+      "19663\n"
      ]
     }
    ],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,16 +273,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3, 611)"
+       "(3, 716)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,13 +357,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82cd18fbf42a4179ac5a0e15825b6a0c",
+       "model_id": "808c3197c2c24e34b0cb7569f8e4d5d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -408,26 +408,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "plt.savefig('person_hist.png')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
