--- a/python/notebook/pose_analysis.ipynb
+++ b/python/notebook/pose_analysis.ipynb
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# setup which datetime to get\n",
     "dm = DataManagement()\n",
-    "after = dt(2018, 7, 23, 14, 0, 0)\n",
-    "before = dt(2018, 7, 23, 14, 1, 0)\n",
+    "after = dt(2018, 9, 9, 13, 7, 0)\n",
+    "before = dt(2018, 9, 9, 13, 8, 0)\n",
     "datetimes = dm.get_datetimes_in(after, before)\n",
     "\n",
     "assert len(datetimes) == 1\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,14 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/mnt/extHDD/raw_data/20180723_1400/rgb/0.png\n"
+      "/mnt/extHDD/raw_data/20180909_1307/rgb/0.png\n"
      ]
     }
    ],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -271,6 +271,7 @@
     "ax1 = fig.add_subplot(221, projection='3d')\n",
     "ax1.scatter(roll_pc[0], roll_pc[1], roll_pc[2])\n",
     "\n",
+    "\n",
     "ax2 = fig.add_subplot(222)\n",
     "ax2.imshow(img)\n",
     "\n",
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,21 +296,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "file count:  813\n"
+      "file count:  720\n"
      ]
     }
    ],
    "source": [
     "del joint\n",
     "\n",
-    "joint_val = JointType.LeftHand.value\n",
+    "joint_val = JointType.Nose.value\n",
     "\n",
     "print(\"file count: \", len(files))\n",
     "joint = np.zeros((len(files), 3))\n",
@@ -325,16 +326,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3, 813)"
+       "(3, 720)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,13 +348,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91ad5725b8084814b370a950a7c40812",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -385,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,13 +411,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd34c3b0950f43058c46e969be9a77c1",
+       "model_id": "254f6915d47c4c69997a14cb4785537a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -461,19 +462,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "plt.savefig('LeftShoulder_track.png')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
